# super-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
codex/: README.md  install.sh
codex/skills/super-skill/: SKILL.md
codex/skills/super-skill/agents/: openai.yaml
commands/: candidates.md  doctor.md  mine.md  seed.md  status.md
evals/release-family/: README.md  grader.py  pilot-log.md  report.py  results-d6-raw.jsonl  results.json  results.template.json
evals/release-family/cases/case1/: PROMPT.md  verify_test.py
evals/release-family/cases/case2/: PROMPT.md  verify_test.py
evals/release-family/cases/case2/fixture/: marketplace.json  package.json  plugin.json  pyproject.toml
evals/release-family/cases/case2/reference/: marketplace.json  package.json  plugin.json  pyproject.toml
evals/release-family/cases/case3/: PROMPT.md  verify_test.py
evals/release-family/cases/case3/fixture/: package.json
evals/release-family/cases/case3/reference/: example.env  package.json
evals/release-family/cases/case4/: PROMPT.md  verify_test.py
evals/release-family/cases/case5/: PROMPT.md  verify_test.py
evals/release-family/cases/case5/fixture/: release.sh
evals/release-family/cases/case5/reference/: release.sh
evals/release-family/cases/n1/: PROMPT.md  verify_test.py
evals/release-family/cases/n1/fixture/: stats.py  test_stats.py
evals/release-family/cases/n1/reference/: stats.py  (+1 more)
evals/release-family/cases/n2/: PROMPT.md  verify_test.py
evals/release-family/handwritten/: SKILL.md
evals/test-fix-family/: README.md  gate2_report.py  grader.py  results.template.json
evals/test-fix-family/cases/case1/: PROMPT.md  broken.py  fixed.py  verify_test.py
evals/test-fix-family/cases/case2/: PROMPT.md  broken.py  fixed.py  verify_test.py
evals/test-fix-family/cases/case3/: PROMPT.md  broken.py  fixed.py  verify_test.py
evals/test-fix-family/handwritten/: SKILL.md
hooks/: hooks.json
skills/super-skill/: SKILL.md
super_skill/: __init__.py  candidate.py  capture.py  cli.py  config.py  doctor.py  evallite.py  gate.py  hooks.py  mine.py  minestate.py  redact.py  registry.py  schemas.py  seed.py  skillmd.py
tests/: test_candidate.py  test_capture.py  test_cli.py  test_codex_package.py  test_config.py  test_doctor.py  test_evallite.py  test_gate.py  test_gate2_harness.py  test_hooks.py  test_minestate.py  test_plugin_manifest.py  test_redact.py  test_registry.py  test_release_family_harness.py  test_seed.py  test_skillmd.py  test_target_adapter.py
(+10 files in other folders)
