[project]
name = "super-skill-cli"
version = "0.9.0"
description = "Personal Agent-Skill package manager: versioned registry, seed import, explain, rollback (M0+WS scope)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "sdsrss", email = "sammuaicode@gmail.com" }]
keywords = ["claude-code", "agent-skills", "skill-manager", "registry", "package-manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sdsrss/super-skill"
Repository = "https://github.com/sdsrss/super-skill"

[project.scripts]
super-skill = "super_skill.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["super_skill"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# SIM905: split-string word lists are more readable than 60-item list literals.
ignore = ["SIM905"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
